# parallel-RA

./: .gitignore  CMakeLists.txt  README.md  btree.cpp  btree.h
SC_2019/: #sec-related.tex#  sample-base.bib  sc_2019.aux  sc_2019.bbl  sc_2019.bbl~  sc_2019.blg  sc_2019.out  sc_2019.tex  sec-eval.tex  sec-impl.tex  sec-intro.tex  sec-ra.tex  sec-related.tex  sec-related.tex~
SC_2019/results/: Insert.pptx  SC.xlsx  join_new.pptx  union_1.pptx  union_2.pptx
data/5clique/: graph_2_8.size  manifest
data/g13315/: App_4_1_2_3_4  Lam_4_1_2_3_4  Var_2_1_2  manifest
data/g4470/: App_4_1_2_3_4  App_4_1_2_3_4.size  App_4_33  App_4_34  App_4_34.size  App_4_35  App_4_35.size  App_4_36  App_4_36.size  App_4_37  App_4_37.size  Lam_4_1_2_3_4  Lam_4_1_2_3_4.size  Lam_4_34  Lam_4_35  Lam_4_36  Lam_4_36.size  Lam_4_37  Lam_4_37.size  Lam_4_38  Lam_4_38.size  Lam_4_39  Lam_4_39.size  Prog_1_1  Prog_1_11  Prog_1_12  Prog_1_7  Var_2_1_2  Var_2_1_2.size  Var_2_3  Var_2_3.size  Var_2_4  Var_2_5  Var_2_5.size  Var_2_6  Var_2_6.size  app_2_52  const_1_46  const_1_47  lam_2_18  (+12 more)
data/g4473/: app_2_55  app_2_55.size  const_1_49  lam_2_24  let_3_6  let_3_7  let_3_7.size  manifest  program_1_40  ref_1_20  ref_1_23  ref_1_23.size  seq_2_41  seq_2_43
data/worstcase-100-terms-7-m/: app_2_55  lam_2_21  lam_2_21.size  let_3_4  manifest  program_1_37  ref_1_17  seq_2_38
data/worstcase-110-terms-7-m/: app_2_54  lam_2_20  let_3_4  manifest  program_1_36  ref_1_16  seq_2_38
data/worstcase-120-terms-7-m/: app_2_54  lam_2_20  lam_2_20.size  let_3_5  let_3_5.size  manifest  program_1_35  ref_1_16  ref_1_16.size  seq_2_36
data/worstcase-130-terms-7-m/: app_2_53  lam_2_20  lam_2_20.size  let_3_5  let_3_5.size  manifest  program_1_35  ref_1_15  ref_1_15.size  seq_2_36  seq_2_36.size
data/worstcase-140-terms-7-m/: app_2_53  const_1_45  lam_2_20  let_3_5  manifest  program_1_36  ref_1_16  seq_2_37
data/worstcase-150-terms-7-m/: app_2_55  lam_2_25  let_3_7  manifest  program_1_41  ref_1_21  seq_2_42
data/worstcase-160-terms-7-m/: app_2_55  lam_2_23  let_3_6  manifest  program_1_38  ref_1_19  ref_1_19.size  seq_2_40  seq_2_40.size
data/worstcase-170-terms-7-m/: app_2_54  app_2_54.size  lam_2_24  let_3_5  let_3_5.size  manifest  program_1_39  ref_1_20  ref_1_20.size  seq_2_40  seq_2_40.size
data/worstcase-180-terms-7-m/: app_2_55  lam_2_25  lam_2_25.size  let_3_7  let_3_7.size  manifest  program_1_38  ref_1_21  ref_1_21.size  seq_2_39
data/worstcase-190-terms-7-m/: app_2_54  app_2_54.size  lam_2_19  lam_2_19.size  let_3_3  let_3_3.size  manifest  program_1_35  ref_1_15  ref_1_15.size  seq_2_36  seq_2_36.size
data/worstcase-200-terms-7-m/: app_2_55  lam_2_23  let_3_4  let_3_4.size  manifest  program_1_39  ref_1_17.size  seq_2_40
data/worstcase-210-terms-7-m/: app_2_55  app_2_55.size  lam_2_23  let_3_5  let_3_5.size  manifest  program_1_38  ref_1_19  ref_1_19.size  seq_2_41
data/worstcase-220-terms-7-m/: app_2_55  app_2_55.size  const_1_47  lam_2_22  lam_2_22.size  let_3_5  let_3_5.size  manifest  program_1_39  ref_1_17  ref_1_17.size  seq_2_40
data/worstcase-230-terms-7-m/: app_2_55  app_2_55.size  lam_2_22  lam_2_22.size  let_3_4  let_3_4.size  manifest  program_1_38  ref_1_16  ref_1_16.size  seq_2_39  seq_2_39.size
data/worstcase-240-terms-7-m/: app_2_53  lam_2_21  lam_2_21.size  let_3_4  let_3_4.size  manifest  program_1_38  ref_1_16  ref_1_16.size  seq_2_39
data/worstcase-250-terms-7-m/: app_2_55  app_2_55.size  lam_2_22  let_3_7  let_3_7.size  manifest  program_1_36  ref_1_17  ref_1_17.size  seq_2_37  seq_2_37.size
data/worstcase-260-terms-7-m/: app_2_54  app_2_54.size  lam_2_23  lam_2_23.size  let_3_5  let_3_5.size  manifest  program_1_39  ref_1_19  seq_2_40
data/worstcase-270-terms-7-m/: app_2_54  app_2_54.size  lam_2_21  lam_2_21.size  let_3_5  let_3_5.size  manifest  (+4 more)
doxygen/: doxygen.cfg
sigmod/: 5clique.cpp  Makefile  worstcase-100-terms-7-m.cpp  worstcase-110-terms-7-m.cpp  worstcase-120-terms-7-m.cpp  worstcase-130-terms-7-m.cpp  worstcase-140-terms-7-m.cpp  worstcase-150-terms-7-m.cpp  worstcase-160-terms-7-m.cpp  worstcase-170-terms-7-m.cpp  worstcase-180-terms-7-m.cpp  worstcase-190-terms-7-m.cpp  worstcase-200-terms-7-m.cpp  worstcase-210-terms-7-m.cpp  worstcase-220-terms-7-m.cpp  worstcase-230-terms-7-m.cpp  worstcase-240-terms-7-m.cpp  worstcase-250-terms-7-m.cpp  worstcase-260-terms-7-m.cpp  worstcase-270-terms-7-m.cpp  worstcase-280-terms-7-m.cpp  worstcase-290-terms-7-m.cpp  worstcase-300-terms-7-m.cpp  worstcase-310-terms-7-m.cpp  worstcase-320-terms-7-m.cpp  worstcase-330-terms-7-m.cpp  worstcase-340-terms-7-m.cpp  worstcase-350-terms-7-m.cpp  worstcase-360-terms-7-m.cpp  worstcase-370-terms-7-m.cpp  worstcase-380-terms-7-m.cpp  worstcase-390-terms-7-m.cpp  worstcase-400-terms-7-m.cpp  worstcase-60-terms-7-m.cpp  worstcase-70-terms-7-m.cpp  worstcase-80-terms-7-m.cpp  worstcase-90-terms-7-m.cpp
src/: RA.h  RA_tasks.cpp  RA_tasks.h  aggregated_union.cpp  all_to_all.cpp  all_to_all_comm.cpp  all_to_all_comm.h  balanced_copy.cpp  balanced_hash_relation.cpp  balanced_hash_relation.h  balanced_hash_tree_TC.cpp  balanced_parallel_io.h  balanced_transitive_closure.cpp  balanced_transitive_closure_data_parallel.cpp  balanced_transitive_closure_data_parallel2.cpp  balanced_transitive_closure_no_comment.cpp  balanced_transitive_closure_t_join_t.cpp  btree.cpp  btree.h  btree_relation.h  comm.cpp  comm.h  compat.h  double_hash_tc_google_map.cpp  ds.h  dup_relation.cpp  google_btree_relation.cpp  google_btree_relation.h  hash.cpp  hash.h  jean.json  join.cpp  json.h  lie.cpp  lie.h  load_balancer.cpp  mpi_buffered_double_hash_tc_google_map.cpp  mpi_double_hash_tc_google_map.cpp  mpi_load_balancer_test.cpp  mpi_tc_google_map.cpp  (+24 more)
test/: Makefile
tests/: all_to_all_benchmark.cpp  freevars.cpp  kcfa-tiny.cpp  tiny.cpp  transitive_closure.cpp  worstcase-110-terms-10-m.cpp  worstcase-110-terms-4-m.cpp  worstcase-110-terms-5-m.cpp  worstcase-110-terms-6-m.cpp  worstcase-110-terms-7-m.cpp  worstcase-110-terms-8-m.cpp  worstcase-110-terms-9-m.cpp
utility/: tsv_to_bin.cpp
(+225 files in other folders)
